k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fitnesstracker-api
  namespace: fitnesstracker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fitnesstracker-api
  template:
    metadata:
      labels:
        app: fitnesstracker-api
    spec:
      containers:
        - name: api
          image: borispocev/fitnesstracker-api:latest
          ports:
            - containerPort: 8080
