k8s/db-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: fitnesstracker-db
  namespace: fitnesstracker
spec:
  serviceName: fitnesstracker-db
  replicas: 1
  selector:
    matchLabels:
      app: fitnesstracker-db
  template:
    metadata:
      labels:
        app: fitnesstracker-db
    spec:
      containers:
        - name: mssql
          image: mcr.microsoft.com/mssql/server:2022-latest
          ports:
            - containerPort: 1433
          volumeMounts:
            - name: mssql-data
              mountPath: /var/opt/mssql
  volumeClaimTemplates:
    - metadata:
        name: mssql-data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 5Gi
