k8s/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fitnesstracker-web
  namespace: fitnesstracker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fitnesstracker-web
  template:
    metadata:
      labels:
        app: fitnesstracker-web
    spec:
      containers:
        - name: web
          image: borispocev/fitnesstracker-web:latest
          ports:
            - containerPort: 8080
