k8s/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fitnesstracker-db
  namespace: fitnesstracker
spec:
  selector:
    app: fitnesstracker-db
  ports:
    - name: mssql
      port: 1433
      targetPort: 1433
  type: ClusterIP
